--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             <th scope="col" class="table-danger" ><div class="sizefecha">OV-Fecha</div></th>
             <th scope="col" class="table-danger"><div class="sizehora">Hora</div></th>
             <th scope="col" class="table-danger" ><div class="sizenumsap">OV-Nro</div></th>
-            <th scope="col" class="table-danger"><div class="sizename">OV-Almacén</div></th>
+            <th scope="col" class="table-danger"><div class="sizeaalmacen">OV-Almacén</div></th>
             
           <!-- GUIA -->
             <th scope="col" class="table-success"><div class="sizefecha">GUÍA-Fecha</div></th>
             <th scope="col" class="table-success"><div class="sizehora">Hora</div></th>
             <th scope="col" class="table-success"><div class="sizenumsap">GUÍA-Nro</div></th>
-            <th scope="col" class="table-success"><div class="sizename">GUÍA-Creador</div></th>
+            <th scope="col" class="table-success"><div class="sizenameguia">GUÍA-Creador</div></th>
 
           <!-- FACTURACION -->
             <th scope="col" class="table-secondary"><div class="sizefecha">FACT-Fecha</div></th>
@@ -124,7 +124,7 @@
               <td class="table-danger">30/09/2022</td>
               <td class="table-danger">9:45</td>
               <td class="table-danger">221511389</td>
-              <td class="table-danger">AZANGARO</td>
+              <td class="table-danger">SHANGRILA</td>
   
               <!-- GUIA -->
               <td class="table-success">30/09/2022</td>
