--- a/index.html
+++ b/index.html
@@ -11,6 +11,96 @@
 </head>
 <body>
     
+
+
+
+<div class="container">
+
+  <h4>Flujo Orden de Ventas</h4>
+
+
+
+  <div class="mb-4">
+    
+    <form action="">
+      <!-- LINEA 1 -->
+      <div class="row  align-items-center ">
+        <div class="col-6 col-md-3">
+          <label for="fechainicio" class="col-form-label ">Fecha Inicio</label>
+        </div>
+        <div class="col-6 col-md-3">
+          <input type="date" class="form-control" id="" placeholder=" ">
+        </div>
+      </div>
+      <!-- LINEA2  -->
+      <div class="row  align-items-center pt-1">
+        <div class="col-6 col-md-3 ">
+          <label for="fechafinal" class="col-form-label ">Fecha Final</label>
+        </div>
+        <div class="col-6 col-md-3">
+          <input type="date" class="form-control" id="" placeholder=" ">
+        </div>
+      </div>
+      <!-- LINEA3 -->
+      <div class="row align-items-center pt-1">
+        <div class="col-6 col-md-3 ">
+          <label for="numeroorden" class="col-form-label ">Numero Orden</label>
+        </div>
+        <div class="col-6 col-md-3">
+          <input type="number" class="form-control" id="" placeholder=" ">
+        </div>
+      </div>
+      <!-- LINEA 4 -->
+      <div class="row align-items-center pt-1 ">
+        <div class="col-6 col-md-3 ">
+          <label for="codigocliente" class="col-form-label ">Código Cliente</label>
+        </div>
+        <div class="col-6 col-md-3">
+          <input type="number" class="form-control" id="" placeholder=" ">
+        </div>
+      </div>
+
+       <!-- FILA 5-->
+      <div class="row align-items-center pt-1">
+        <div class="col-6 col-md-3 ">
+          <label for="almacen" class="col-form-label ">Almacén</label>
+        </div>
+        <div class="col-6 col-md-3">
+          <select id="almacen" class="form-control">
+            <option selected>Todos</option>
+            <option>Azangaro</option>
+            <option>Shangrila</option>
+            <option>Retail</option>
+          </select>
+        </div>
+      </div>
+
+      <!-- FILA 6 -->
+      <div class="row align-items-center pt-1">
+        <div class="col-6 col-md-3 ">
+          <label for="empresa" class="col-form-label ">Empresa</label>
+        </div>
+        <div class="col-6 col-md-3">
+          <select id="empresa" class="form-control">
+            <option selected>Todos</option>
+            <option>Acsa</option>
+            <option>Promatisa</option>
+          </select>
+        </div>
+      </div>
+
+
+
+    </form>
+
+
+  </div>
+
+  
+
+
+
+
   <div class="row">
 
     <div class="col col-md-12">
@@ -188,7 +278,7 @@
 
   </div>
 
-
+</div>
 
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script> 
