borders and shadown

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 <body>
     
 
+<div class="container bg-light py-2 my-2 shadow-sm rounded" >
+    <h3>Flujo Orden de Ventas</h3>
+  </div> 
+
+<div class="container container-xl container-xxl mb-3 border border-primary p-3 rounded-top">
+  
 
 
-<div class="container container-xl container-xxl">
-
-  <h4>Flujo Orden de Ventas</h4>
-
-
-
-  <div class="mb-4">
+  <div class="mb-4 mt-3">
     
     <form action="">
       <!-- LINEA 1 -->
       <div class="row  align-items-center ">
         <div class="col-6 col-md-3 ">
-          <label for="fechainicio" class="col-form-label ">Fecha Inicio</label>
+          <label for="fechainicio" class="col-form-label ">Fecha Inicio :</label>
         </div>
         <div class="col-6 col-md-6 col-lg-4">
           <input type="date" class="form-control" id="" placeholder=" ">
@@ -35,7 +35,7 @@
       <!-- LINEA2  -->
       <div class="row  align-items-center pt-1">
         <div class="col-6 col-md-3 ">
-          <label for="fechafinal" class="col-form-label ">Fecha Final</label>
+          <label for="fechafinal" class="col-form-label ">Fecha Final :</label>
         </div>
         <div class="col-6 col-md-6 col-lg-4">
           <input type="date" class="form-control" id="" placeholder=" ">
@@ -44,7 +44,7 @@
       <!-- LINEA3 -->
       <div class="row align-items-center pt-1">
         <div class="col-6 col-md-3 ">
-          <label for="numeroorden" class="col-form-label ">Numero Orden</label>
+          <label for="numeroorden" class="col-form-label ">Numero Orden :</label>
         </div>
         <div class="col-6 col-md-6 col-lg-4">
           <input type="number" class="form-control" id="" placeholder=" ">
@@ -53,7 +53,7 @@
       <!-- LINEA 4 -->
       <div class="row align-items-center pt-1 ">
         <div class="col-6 col-md-3 ">
-          <label for="codigocliente" class="col-form-label ">Código Cliente</label>
+          <label for="codigocliente" class="col-form-label ">Código Cliente :</label>
         </div>
         <div class="col-6 col-md-6 col-lg-4">
           <input type="number" class="form-control" id="" placeholder=" ">
@@ -63,7 +63,7 @@
        <!-- FILA 5-->
       <div class="row align-items-center pt-1">
         <div class="col-6 col-md-3 ">
-          <label for="almacen" class="col-form-label ">Almacén</label>
+          <label for="almacen" class="col-form-label ">Almacén :</label>
         </div>
         <div class="col-6 col-md-6 col-lg-4">
           <select id="almacen" class="form-control">
@@ -78,7 +78,7 @@
       <!-- FILA 6 -->
       <div class="row align-items-center pt-1">
         <div class="col-6 col-md-3 ">
-          <label for="empresa" class="col-form-label ">Empresa</label>
+          <label for="empresa" class="col-form-label ">Empresa : </label>
         </div>
         <div class="col-6 col-md-6 col-lg-4">
           <select id="empresa" class="form-control">
