--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     
 
-<div class="container bg-light py-2 my-2 shadow-sm rounded" >
+<div class="container bg-light py-2 mt-2 mb-3 shadow-sm rounded" >
     <h3>Flujo Orden de Ventas</h3>
   </div> 
 
-<div class="container container-xl container-xxl mb-3 border border-primary p-3 rounded-top">
+<div class="container container-xl container-xxl mb-3 border border-info p-3 rounded-top bg-light">
   
 
 
