--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
-<body>
+<body class="container-xxl">
 
 <div class="container bg-light py-2 mt-2 mb-3 shadow-sm rounded" >
     <h3>Flujo Orden de Ventas</h3>
